# noventis-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.circleci/: config.yml
docker/postgresql/: Dockerfile
migrations.1/2019-05-20-073819_create_user/: down.sql  up.sql
migrations.1/2019-05-20-120500_create_formation/: up.sql
migrations/2019-05-20-071842_create_formation/: down.sql  up.sql
migrations/2019-05-20-073819_create_user/: down.sql  up.sql
migrations/2019-05-20-120500_create_formation/: down.sql
migrations/2019-06-17-113407_create_form/: down.sql  up.sql
migrations/2019-06-19-081650_create_pharmacy/: down.sql  up.sql
migrations/2019-06-21-091331_create_doctors/: down.sql  up.sql
migrations/2019-06-21-093918_create_doctors_formations/: down.sql  up.sql
migrations/2019-07-08-083734_create_product/: down.sql  up.sql
migrations/2019-07-08-084306_create_pharmacies_purchases_products/: down.sql  up.sql
migrations/2019-07-08-085003_create_pharmacies_sales_products/: down.sql  up.sql
src/: dbconnection.rs  main.rs  schema.rs  user.rs
src/doctor/: doctor.rs  mod.rs
src/doctors/: handler.rs  mod.rs  repository.rs  router.rs  test.rs
src/doctors_formations/: handler.rs  mod.rs  repository.rs  router.rs  test.rs
src/formation/: formation.rs  mod.rs
src/formations/: handler.rs  mod.rs  repository.rs  router.rs  test.rs
src/forms/: handler.rs  mod.rs  repository.rs  router.rs  test.rs
src/models/: doctor.rs  formation.rs  mod.rs
src/pharmacies/: handler.rs  mod.rs  repository.rs  router.rs  test.rs
(+18 files in other folders)
